<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dominic.memo.CreateNote">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinnerNoteType"
            android:layout_alignParentBottom="true">

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            </GridLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txttitle"
                android:maxLength="25"
                android:textColor="@android:color/holo_orange_dark"
                android:hint="@string/title_hint"
                android:layout_below="@+id/btnBack"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:singleLine="true"
                android:editable="true" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView4" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:hint="@string/hint_description"
                    android:layout_below="@+id/txttitle"
                    android:layout_alignParentLeft="true"
                    android:textColor="@android:color/holo_orange_dark"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:singleLine="false"
                    android:editable="true"
                    android:lines="5"
                    android:maxLength="140"
                    android:nestedScrollingEnabled="false" />
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/note_type_text"
                    android:textColor="@color/blue"
                    android:id="@+id/txtNoteType"
                    android:layout_margin="10dp"
                    android:layout_below="@+id/description"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/black"></View>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerNoteType"
                    android:entries="@array/note_type"
                     android:spinnerMode="dropdown"

                    android:layout_below="@+id/description"

                   />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/black"></View>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Do U Want to Set Alert?"
    android:textSize="18sp"
    android:gravity="center"
    android:textColor="@color/blue"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_alert"
                    android:textSize="18sp"
                    android:id="@+id/checkBox"
                    android:layout_margin="3dp"
                    android:layout_below="@+id/spinnerNoteType"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:enabled="false"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Do U Want to Notify?Choose Notify"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/blue"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_alert"
                    android:textSize="18sp"
                    android:id="@+id/checkBox2"
                    android:layout_margin="3dp"
                    android:layout_below="@+id/spinnerNoteType"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:enabled="false"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/textview_date"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:id="@+id/txtDate" />

                <DatePicker
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="true"
                    android:id="@+id/datePicker"
                    android:layout_margin="10dp"
                    android:spinnersShown="false"
                    android:clickable="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txt_time"
                    android:gravity="center"
                     android:textColor="@color/blue"
                    android:id="@+id/txtTime" />

                <TimePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timePicker"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
